# MarlinTrk

./: AUTHORS  CMakeLists.txt  README  README.md
.github/workflows/: coverity.yml  key4hep.yml  linux.yml
cmake/: MarlinTrkConfig.cmake.in  MarlinTrkConfigVersion.cmake.in
doc/: CMakeLists.txt  ReleaseNotes.md
include/: Factory.h  IMarlinTrack.h  MarlinKalTest.h  MarlinKalTestTrack.h  RefitProcessor.h
include/MarlinTrk/: ConfigFlags.h  DiagnosticsController.h  Factory.h  HelixFit.h  HelixTrack.h  IMarlinTrack.h  IMarlinTrkFitter.h  IMarlinTrkSystem.h  LCIOTrackPropagators.h  MarlinAidaTT.h  MarlinAidaTTTrack.h  MarlinDDKalTest.h  MarlinDDKalTestTrack.h  MarlinKalTest.h  MarlinKalTestTrack.h  MarlinTrkDiagnostics.h  MarlinTrkNtuple.h  MarlinTrkUtils.h  TrkAnalysisTree.h  TrkSysConfig.h
src/: DiagnosticsController.cc  Factory.cc  HelixFit.cc  HelixTrack.cc  IMarlinTrack.cc  IMarlinTrkSystem.cc  LCIOTrackPropagators.cc  MarlinAidaTT.cc  MarlinAidaTTTrack.cc  MarlinDDKalTest.cc  MarlinDDKalTestTrack.cc  MarlinKalTest.cc  MarlinKalTestTrack.cc  MarlinTrkDiagnostics.cc  MarlinTrkUtils.cc  RefitProcessor.cc
temporary_utils/: ILDPlanarHitExt.h  SimplePlanarDigiProcessor.cc  TrackerHitLayerNumberProcessor.cc  TrackerHitLayerNumberProcessor.h
util/: BoundaryRectangle.cc  BoundaryRectangle.h  BoundaryTrapezoid.cc  BoundaryTrapezoid.h  CartesianCoordinateSystem.cc  CartesianCoordinateSystem.h  IBoundary.h  ICoordinateSystem.h  MeasurementSurface.cc  MeasurementSurface.h  MeasurementSurfaceStore.cc  MeasurementSurfaceStore.h
